[tool.poetry]
name = "check_k8s"
version = "1.1.0"
description = "Kubernetes monitoring plugin"
authors = ["Robert Wikman <rwikman@op5.com>"]
license = "GPL-2.0"

[tool.poetry.dependencies]
python = "^3.6.8"

[tool.poetry.dev-dependencies]
twine = "^3.8"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
