[tool.poetry]
name = "check_k8s"
version = "1.1.0"
description = "Kubernetes monitoring plugin"
authors = ["Robert Wikman <rwikman@op5.com>"]
license = "GPL-2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
twine = "^3.8"
pytest = "^7.0.1"
pytest-cov = "^4.0.0"
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
