[tool.poetry]
name = "check_k8s"
version = "1.1.0"
description = "Kubernetes monitoring plugin"
authors = ["Robert Wikman <rwikman@op5.com>"]
license = "GPL-2.0"
packages = [
    {include = "k8s"}
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
twine = "^6.1.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
